notes drag and resize
