# src/swagger/api/index.ts
@@ -8,12 +8,15 @@ export type { OpenAPIConfig } from './core/OpenAPI';
 
 export type { CreateFolderDto } from './models/CreateFolderDto';
 export type { CreateNoteReqDto } from './models/CreateNoteReqDto';
+export type { CreateOneTimeNotificationDto } from './models/CreateOneTimeNotificationDto';
 export type { FolderModel } from './models/FolderModel';
+export type { FolderWithNotes } from './models/FolderWithNotes';
 export type { GetAllUserFoldersResDTO } from './models/GetAllUserFoldersResDTO';
 export type { GetFolderNotesResDTO } from './models/GetFolderNotesResDTO';
 export type { LoginReqDTO } from './models/LoginReqDTO';
 export type { LoginResDTO } from './models/LoginResDTO';
 export type { NoteModel } from './models/NoteModel';
+export type { NotesSummaryResDto } from './models/NotesSummaryResDto';
 export type { SignupReqDTO } from './models/SignupReqDTO';
 export type { UpdateFolderDto } from './models/UpdateFolderDto';
 export type { UpdateNoteReqDto } from './models/UpdateNoteReqDto';
@@ -21,4 +24,5 @@ export type { UserModel } from './models/UserModel';
 
 export { FoldersService } from './services/FoldersService';
 export { NotesService } from './services/NotesService';
+export { NotificationsService } from './services/NotificationsService';
 export { UserService } from './services/UserService';
