# src/swagger/api/models/CreateNoteReqDto.ts
@@ -3,13 +3,13 @@
 /* eslint-disable */
 
 export type CreateNoteReqDto = {
-    folderId: string;
     name: string;
     content: string;
     'x': number;
     'y': number;
     width: number;
     height: number;
+    zIndex: number;
     color: string;
+    folderId: string;
 };
-
