# src/swagger/api/models/NotesSummaryResDto.ts
@@ -1,0 +1,10 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { FolderWithNotes } from './FolderWithNotes';
+
+export type NotesSummaryResDto = {
+    foldersCnt: number;
+    folders: Array<FolderWithNotes>;
+};
